@@ -4,16 +4,17 @@ import com.mka.springsecurity2v.model.Developer;
 import org.springframework.web.bind.annotation.*;
 
 import java.util.List;
+import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 @RestController
 @RequestMapping("/api/v1/developers")
 public class DeveloperRestController {
-    private List<Developer> developers = Stream.of(
+    private final List<Developer> developers = Stream.of(
             new Developer(1L, "Ivan", "Ivanov"),
             new Developer(2L, "Sergey", "Sergeev"),
             new Developer(3L, "Petr", "Petrov")
-    ).toList();
+    ).collect(Collectors.toList());
 
     @GetMapping
     public List<Developer> getAll() {
